--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: perl
 
 env:
-  - AUTOMATED_TESTING=1 PREREQS="rlib File::HomeDir File::Spec Array::Columnize Data::Dumper Getopt::Long Digest::SHA Pod::Text Syntax::Highlight::Perl::Improved Scalar::Util PadWalker"
+  - AUTOMATED_TESTING=1 PREREQS="Devel::Trepan"
 
 after_failure:
   - cat /home/travis/.cpanm/work/*/build.log
